--- a/client/style.css
+++ b/client/style.css
@@ -523,6 +523,7 @@ border-radius: 5px;
 }
 .share-button:hover{
   transform: scale(1.1);
+ 
 }
 .share-button span{
   position: absolute;
@@ -541,6 +542,8 @@ border-radius: 5px;
 }
 .share-button button {
   flex: 1;
+ z-index: -1;
+  position:relative;
   font-size: 26px;
   color: #150e5a;
   text-align: center;
@@ -552,6 +555,7 @@ border-radius: 5px;
 .share-button:hover button {
   opacity: 1;
   transform: translateX(0);
+  
 }
 .share-button button:nth-of-type(1){
   transition-delay: 1s;
@@ -675,3 +679,7 @@ body.transition *:after {
 }
 
 
+.fa-edit{
+	z-index: -100;
+	position: relative;
+}
