--- a/client/style.css
+++ b/client/style.css
@@ -242,7 +242,10 @@ aside {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 0px;
+  background: transparent;
+  
+
 }
 
 
@@ -398,7 +401,7 @@ main header h3 {
 	margin-bottom: 5px;
 }
 #chat .message {
-	padding: 20px;
+	padding: 15px;
 	color: #fff;
 	line-height: 25px;
 	max-width: 90%;
@@ -463,12 +466,20 @@ background:inherit;
 }
 
 
-input.text-box{
-	background-color: transparent;
-	border: 0px none;
+textarea.text-box{
+background-color: transparent;
+width: 100%;
+height: 100%;
+font-size: 16px;
+overflow:auto;
+line-height: 1.4;
+border: none;
+resize: vertical;
+    
+
 }
 
-input.text-box:focus{
+textarea.text-box:focus{
 	outline: none;
 }
 
@@ -687,3 +698,5 @@ body.transition *:after {
 	z-index: -100;
 	position: relative;
 }
+
+ 
